reset margins and paddings in interp view to avoid jump on display

--- a/front_end/css/less/module/interpretations.less
+++ b/front_end/css/less/module/interpretations.less
@@ -14,8 +14,14 @@
         padding: 0;
     }
 
+    ol {
+        margin-top: 0;
+        padding-top: 0;
+    }
+
     li { /* reset borders and padding from main regulation */
-        padding-bottom: 0px;
+        margin: 0;
+        padding: 0px;
         border-bottom: none;
     }
 
