--- a/front_end/css/less/typography.less
+++ b/front_end/css/less/typography.less
@@ -161,6 +161,10 @@ a.definition:active {
     border-bottom: 1px solid #F2F2F2;
 }
 
+.level-1 > li:last-child {
+    border-bottom: 0px;
+}
+
 .level-2 li {
     margin-top: 0.875em;
 }
